implement cookies jwt token in the login

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
 DATABASE_URL=mongodb+srv://shafiuddin05868:6AW2lxOO8CXlkGXP@z.h4ko4sa.mongodb.net/devTinder
+JWT_SECRET=your_jwt_secret
+JWT_EXPIRATION=1h
+JWT_REFRESH_SECRET=your_jwt_refresh_secret
+JWT_REFRESH_EXPIRATION=30d
+NODE_ENV=development
